Squash bug with recaptcha tabindex != -1 elements.

--- a/RootWeb.Mvc/styles/contact.scss
+++ b/RootWeb.Mvc/styles/contact.scss
@@ -1,5 +1,8 @@
 @import 'bootstrap';
 
+form.contact .message.field {
+    min-height: 110px;
+}
 form.contact textarea#message {
 	height: 60px;
     min-height: 60px;
@@ -16,6 +19,9 @@ form.contact textarea#message:focus {
     &.invalid {
         color: #c00;
     }
+}
+form.contact .recaptcha.field .validation {
+    min-height: 40px;
 }
 #preview {
     .field {
